[reflow branch] intrinsic widths computed incorrectly for ::first-letter
Categories
(Core :: Layout: Block and Inline, defect)
Tracking
()
People
(Reporter: dbaron, Unassigned)
References
(Depends on 1 open bug)
Details
(Whiteboard: [first letter])
Attachments
(1 file)
|
736 bytes,
text/html; charset=UTF-8
|
Details |
| Reporter | ||
Comment 1•18 years ago
|
||
| Reporter | ||
Updated•18 years ago
|
| Reporter | ||
Comment 2•18 years ago
|
||
| Reporter | ||
Updated•18 years ago
|
| Reporter | ||
Updated•15 years ago
|
Comment 9•7 years ago
|
||
Comment 10•6 years ago
|
||
Another test case for this: https://test.chrislewis.codes/initial-letter/simple.html
I'm trying to fit text into a given space, and the mis-calculation of ::first-letter box width makes the text measurements very inaccurate.
Comment 11•6 years ago
|
||
I opened a PR on WPT with a reftest for this bug: https://github.com/web-platform-tests/wpt/pull/18882
| Reporter | ||
Updated•4 years ago
|
Updated•3 years ago
|
Comment 17•3 years ago
|
||
The severity field for this bug is relatively low, S3. However, the bug has 10 duplicates.
:jfkthame, could you consider increasing the bug severity?
For more information, please visit auto_nag documentation.
Comment 18•3 years ago
|
||
The last needinfo from me was triggered in error by recent activity on the bug. I'm clearing the needinfo since this is a very old bug and I don't know if it's still relevant.
Comment 20•1 year ago
|
||
This was fixed in bug 385615 (which had a larger number of dupes and examples attached); dup'ing forward to that issue.
Description
•