Implement intrinsic width functions on nsFirstLetterFrame, although they still don't do the right thing.  b=362880