mozilla/layout/generic/nsInlineFrame.h
@@ -44,7 +44,6 @@
 #include "nsAbsoluteContainingBlock.h"
 #include "nsLineLayout.h"
 #include "nsLayoutAtoms.h"
-#include "nsLayoutUtils.h"
 
 class nsAnonymousBlockFrame;
 
@@ -177,10 +176,6 @@ protected:
   nsInlineFrame(nsStyleContext* aContext) : nsInlineFrameSuper(aContext) {}
 
   virtual PRIntn GetSkipSides() const;
-
-  void DoInlineIntrinsicWidth(nsIRenderingContext *aRenderingContext,
-                              InlineIntrinsicWidthData *aData,
-                              nsLayoutUtils::IntrinsicWidthType aType);
 
   nsresult ReflowFrames(nsPresContext* aPresContext,
                         const nsHTMLReflowState& aReflowState,
